[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/MinecraftTitle.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PlayerName1" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.05
anchor_bottom = 0.05
margin_right = 153.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName2" type="Label" parent="."]
anchor_left = 0.95
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.05
margin_left = -159.0
custom_fonts/font = SubResource( 1 )
text = "Player 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillsPlayer1" type="Label" parent="."]
margin_left = 64.0
margin_top = 72.0
margin_right = 181.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
text = "Kills  0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillsPlayer2" type="Label" parent="."]
anchor_left = 0.9
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.1
margin_left = -95.0
margin_right = 22.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Kills  0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerLabel" type="Label" parent="."]
visible = false
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.15
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "Winner"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
